# GameRevamp

./: .gitignore  CMakeLists.txt
assets/shaders/: shader.frag  shader.vert
include/engine/: Colours.h  Mesh.h  MeshFactory.h  Renderer.h  Shader.h  Texture.h  Window.h
src/: main.cpp
src/engine/: Mesh.cpp  MeshFactory.cpp  Renderer.cpp  Shader.cpp  Texture.cpp  Window.cpp
